--- a/leafpicrevived/build.gradle
+++ b/leafpicrevived/build.gradle
@@ -25,6 +25,7 @@ android {
         versionCode 19
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
+        testInstrumentationRunner = 'android.support.test.runner.AndroidJUnitRunner'
     }
 
     lintOptions {
@@ -134,10 +135,14 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api 'com.android.support:multidex:1.0.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha03'
+    androidTestImplementation 'androidx.test:rules:1.3.0-alpha03'
 
     dependencies {
         implementation 'com.github.apcro:Liz:0.6.0'
     }
+
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
 }
 
 Properties props = new Properties()
